--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <!-- Mirrored from localhost/muonland/weeding-page-2/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Jun 2021 10:16:36 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+	<meta name="theme-color" content="#A61321" />
 	<meta charset="UTF-8">
-		<title>weeding page &#8211; test</title>
+		<title>Shruti ❤️ Shashikant</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='http://s.w.org/' />
 <link rel="alternate" type="application/rss+xml" title="test &raquo; Feed" href="http://localhost/muonland/feed/" />
