--- a/index.html
+++ b/index.html
@@ -395,12 +395,12 @@ img.emoji {
 				<div class="elementor-element elementor-element-beca555 elementor-widget elementor-widget-html" data-id="beca555" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
 			 <input type="button" value="PLAY" onclick="play()" style="width:100%;background-color:transparent;color:transparent">
-    <audio id="audio" autoplay src="y2mate.com - I Wont Give Up  Jason Mraz Lyrics.mp3"></audio>		</div>
+    <audio id="audio" src="y2mate.com - I Wont Give Up  Jason Mraz Lyrics.mp3"></audio>		</div>
 				</div>
 				<div class="elementor-element elementor-element-d9dfc5e elementor-hidden-desktop elementor-hidden-tablet elementor-hidden-phone elementor-widget elementor-widget-html" data-id="d9dfc5e" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
 			 <input type="button" value="PLAY" onclick="play()">
-    <audio id="audio" autoplay src="y2mate.com - I Wont Give Up  Jason Mraz Lyrics.mp3"></audio>		</div>
+    <audio id="audio"  src="y2mate.com - I Wont Give Up  Jason Mraz Lyrics.mp3"></audio>		</div>
 				</div>
 					</div>
 		</div>
